# Inkroom-novel

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/hwpx/: base.hwpx
src/: App.css  App.jsx  desktopDb.js  hwpxExport.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppModal.jsx  AppTitleBar.jsx  CardDialog.jsx  CommandBar.jsx  DownloadNotice.jsx  EditorControls.jsx  LibraryPanel.jsx  SettingsView.jsx  StatsView.jsx  SystemView.jsx  WritingView.jsx
src/hooks/: usePaperColumns.js  useResponsiveMode.js
src/lib/: inkroomCore.js
