[package]
name = "inkroom"
version = "0.1.5"
description = "Inkroom desktop app"
authors = ["Inkroom"]
edition = "2021"

[lib]
name = "inkroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
